Task: Improved infrastructure configuration (POM and resources)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,74 @@
-spring.application.name=CAP
+# -------------------------
+# APPLICATION
+# -------------------------
+spring.application.name=cap
+server.port=8080
+server.shutdown=graceful
+
+# -------------------------
+# DATASOURCE (H2)
+# -------------------------
+spring.datasource.url=jdbc:h2:mem:capdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# -------------------------
+# ACTUATOR
+# -------------------------
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,loggers,env,threaddump,heapdump
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+
+management.metrics.tags.application=${spring.application.name}
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+management.metrics.enable.system=true
+management.metrics.enable.http.server.requests=true
+
+# -------------------------
+# PROMETHEUS
+# -------------------------
+management.prometheus.metrics.export.enabled=true
+
+# Endpoint:
+# http://localhost:8080/actuator/prometheus
+
+# -------------------------
+# DISTRIBUTED TRACING
+# -------------------------
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+
+# OTLP (si usas collector externo)
+management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
+
+# -------------------------
+# LOGGING
+# -------------------------
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=ERROR
+
+logging.pattern.level=%5p [${spring.application.name:},traceId=%X{traceId:-},spanId=%X{spanId:-}]
+
+# -------------------------
+# THREAD POOL (Tomcat)
+# -------------------------
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=20
+
+# -------------------------
+# PERFORMANCE
+# -------------------------
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
